# ccsync

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
src/: archive.rs  backups.rs  cli.rs  config.rs  error.rs  git.rs  install.rs  main.rs  manifest.rs  mcp.rs  paths.rs  redact.rs  remap.rs  restore.rs  service.rs  snapshot.rs  theme.rs  tui.rs
