[package]
name = "ccsync"
version = "0.1.0"
edition = "2021"
description = "Sync and back up Claude Code settings, sessions, and memory across machines"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tar = "0.4"
flate2 = "1"
age = { version = "0.10", features = ["armor"] }
sha2 = "0.10"
walkdir = "2"
dirs = "5"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
